# data-warehouse-with-dbt

./: README.md
.github/workflows/: README.md  astronomer.yml  dbt-ci.yml
airflow/: .gitmodules  README.md  docker-compose.override.yml
airflow/dags/: dag.py  dag_asset_aware.py
data_warehouse/: README.md
jornada_dw/seeds/: cadastros.csv
local_setup/: .gitignore  README.md  pyproject.toml  requirements.txt
